@@ -1,3 +1,12 @@
+2026-02-04T01:13:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21654369905 # 867
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-04
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
+* notice: next accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-03T01:17:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21612841387 # 866
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-03
